# BasicAgent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  USAGE.md  pyproject.toml  requirements.txt  test_package.py  需求说明.md
basic_agent/: init.py
basic_agent/daemon/: __init__.py  session_manager.py
basic_agent/engine/: __init__.py  query.py  queryengine.py  transcript.py
basic_agent/memory/: __init__.py  compression.py
basic_agent/models/: __init__.py  client.py  config.py  types.py
basic_agent/prompts/: __init__.py  prompt.py
config/: BA_Agent.json  compression.json
config/prompts/: compact.txt
config/provider/: deepseek-v4-flash.json  deepseek-v4-pro.json  gpt-4.json  gpt-4o-mini.json  gpt-4o.json  ollama-llama3.json
docs/: api-v1.md  architecture.md  message-format.md  phase0-design.md  progress.md
examples/: client_demo.py  daemon_demo.py  litellm_demo.py
src/daemon/: __init__.py
src/engine/: __init__.py  query.py  queryengine.py  transcript.py
src/memory/: __init__.py  compression.py
src/models/: __init__.py  client.py  config.py  types.py
src/prompts/: prompt.py
tests/: test_basic.py  test_chat.py  test_compression.py  test_converter.py  test_converter_provider.py  test_engine.py  test_message_ordering.py  test_phase1.py  test_prompt_injection.py  test_queryloop.py  test_roleplay.py  test_thinking.py
