[project]
name = "basic-agent"
version = "1.1.1"
description = "轻量级 LLM Agent 对话服务框架 - 专为实时对话游戏优化"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40",
    "aiofiles>=24.1",
    "pydantic>=2.7",
    "tiktoken>=0.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.28",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["basic_agent*", "config*"]

[tool.setuptools.package-data]
config = ["*.json", "prompts/*.txt"]
